--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,50 @@
 {
+    "name": "anderson/mvc-base",
+    "description": "API MVC em PHP 8.2.1",
+    "type": "project",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Config\\": "config/"
+            "App\\": "app/"
+        },
+        "files": [
+            "app/Helpers/functions.php"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
-    }
+    },
+    "require": {
+        "slim/slim": "^4.11",
+        "slim/psr7": "^1.6",
+        "php-di/php-di": "^7.0",
+        "vlucas/phpdotenv": "^5.5",
+        "doctrine/orm": "^2.15",
+        "symfony/cache": "^6.2",
+        "monolog/monolog": "^3.3",
+        "respect/validation": "^2.2",
+        "firebase/php-jwt": "^6.4",
+        "league/fractal": "^0.20"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0",
+        "mockery/mockery": "^1.5",
+        "fakerphp/faker": "^1.21",
+        "squizlabs/php_codesniffer": "^3.7",
+        "phpstan/phpstan": "^1.10"
+    },
+    "scripts": {
+        "test": "phpunit",
+        "cs": "phpcs --standard=PSR12 app tests",
+        "csfix": "phpcbf --standard=PSR12 app tests",
+        "stan": "phpstan analyse app tests --level=7"
+    },
+    "config": {
+        "sort-packages": true,
+        "optimize-autoloader": true
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
